# LiveFrameGateway

./: LICENSE  README.md  README.zh-CN.md  pyproject.toml
benchmarks/: question_path_latency_probe.py  replay_latency.py  vllm_latency_probe.py
docs/: design.md
docs/superpowers/plans/: 2026-05-16-alpha2-proof-release-implementation-plan.md
docs/superpowers/specs/: 2026-05-16-alpha2-proof-release-design.md
examples/: mock_primer_service.py  openai_compatible_injection.py
src/liveframegateway/: __init__.py  cli.py  client.py  injection.py  models.py  primer.py  selection.py  service.py  store.py
tests/: test_benchmark.py  test_client.py  test_injection.py  test_mock_primer_service.py  test_models.py  test_question_path_latency_probe.py  test_selection.py  test_service.py  test_store.py  test_vllm_latency_probe.py
